[package]
name = "ws2"
version = "0.2.4"
edition = "2021"
description = "ws2 is an out-of-the-box websocket library for Rust."
license = "MIT"
repository = "https://github.com/sweihub/ws2"
documentation = "https://docs.rs/ws2"

[dependencies]
anyhow = "1.0.71"
log2 = "0.1.7"
poll-channel = "0.1"
url = "2.4.0"
ws = { version = "0.9.2", features = ["ssl"] }
